--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,17 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_add_profile">Add profile</string>
-
+    <string name="discard">Discard</string>
+    <string name="ok">Ok</string>
+    <string name="password_length">Password length</string>
+    <string name="private_key">Private key</string>
+    <string name="name">Name</string>
+    <string name="add">Add</string>
+    
+    <string-array name="password_types_array">
+        <item>Alphanumeric + Special chars</item>
+        <item>Alphanumeric</item>
+        <item>Numeric</item>
+    </string-array>
+    
 </resources>
