--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_add_profile">Add profile</string>
     <string name="action_edit_profile">Edit profile</string>
+    <string name="action_delete">Delete</string>
     <string name="discard">Discard</string>
     <string name="ok">Ok</string>
     <string name="password_length">Password length</string>
