--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,17 @@
     <string name="profile">Profile</string>
     <string name="copied_to_clipboard">The hashed password has been
         copied to the clipboard</string>
+    <string name="remember_master_key">Remember master key</string>
+    <string name="settings_summary_remember_master_key_never">
+        Master key will not be remembered when you leave the app
+    </string>
+    <string name="settings_summary_remember_master_key_minutes">
+        Master key will be remembered for %d minutes after you leave the app
+    </string>
+    <string name="settings_summary_remember_master_key_hours">
+        Master key will be remembered for %d hours after you leave the app
+    </string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
