Added activity to manage profile tags

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,11 @@
     <string name="action_settings">Settings</string>
     <string name="action_add_profile">Add profile</string>
     <string name="action_edit_profile">Edit profile</string>
+    <string name="action_manage_tags">Manage tags</string>
     <string name="action_delete">Delete</string>
     <string name="confirm_delete">Delete \"%s\" profile?</string>
+    <string name="confirm_delete_tag">Delete \"%s\" tag?</string>
+    <string name="warning_lose_settings">You\'ll lose its settings!</string>
     <string name="discard">Discard</string>
     <string name="ok">Ok</string>
     <string name="password_length">Password length</string>
@@ -23,6 +26,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="cancel">Cancel</string>
     <string name="profile">Profile</string>
+    <string name="no_tags">You got no tags!</string>
     <string name="copied_to_clipboard">Hashed password copied to clipboard</string>
     <string name="settings_title_remember_master_key">Remember master
         key</string>
