--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,6 @@
     <string name="settings_summary_copy_to_clipboard_disabled">The
         hashed password is not automatically copied to the clipboard</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="error">Ouch! Something happened!</string>
 
 </resources>
