--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,53 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Titles -->
     <string name="app_name">Hash my pass</string>
-    <string name="hello_world">Hello world!</string>
+
+    <!-- Actions -->
     <string name="action_settings">Settings</string>
     <string name="action_add_profile">Add profile</string>
     <string name="action_edit_profile">Edit profile</string>
     <string name="action_manage_tags">Manage tags</string>
     <string name="action_delete">Delete</string>
+    <string name="discard">Discard</string>
+    <string name="ok">Ok</string>
+    <string name="copy_to_clipboard">Copy to clipboard</string>
+    <string name="cancel">Cancel</string>
+    <string name="add">Add</string>
+    <string name="save">Save</string>
+    <string name="hash">Hash</string>
+
+    <!-- Dialogs -->
     <string name="confirm_delete">Delete \"%s\" profile?</string>
     <string name="confirm_delete_tag">Delete \"%s\" tag?</string>
     <string name="warning_lose_settings">You\'ll lose all its settings!</string>
-    <string name="discard">Discard</string>
-    <string name="ok">Ok</string>
+
+    <!-- Descriptions / Hints -->
+    <string name="profile">Profile</string>
     <string name="password_length">Password length</string>
     <string name="password_type">Password type</string>
     <string name="private_key">Private key</string>
     <string name="name">Name</string>
-    <string name="add">Add</string>
-    <string name="save">Save</string>
-    <string name="hash">Hash</string>
     <string name="master_key">Master key</string>
     <string name="tag">Tag</string>
     <string name="tag_settings">Tag settings</string>
-    <string name="copy_to_clipboard">Copy to clipboard</string>
-    <string name="cancel">Cancel</string>
-    <string name="profile">Profile</string>
+
+    <!-- Notices -->
     <string name="no_tags">You got no tags!</string>
-    <string name="copied_to_clipboard">Hashed password copied to clipboard</string>
+    <string name="copied_to_clipboard">Hashed password copied to
+        clipboard</string>
+
+    <!-- Settings titles -->
     <string name="settings_title_remember_master_key">Remember master
         key</string>
-    <string name="settings_summary_remember_master_key_never">
-        Master key will not be remembered when you leave the app
-    </string>
-    <string name="settings_summary_remember_master_key_minutes">
-        Master key will be remembered for %d minutes after you leave the app
-    </string>
-    <string name="settings_summary_remember_master_key_hours">
-        Master key will be remembered for %d hours after you leave the app
-    </string>
     <string name="settings_title_copy_to_clipboard">Copy password to
         clipboard</string>
-    <string name="settings_summary_copy_to_clipboard_enabled">The
-        hashed password is automatically copied to the clipboard</string>
-    <string name="settings_summary_copy_to_clipboard_disabled">The
-        hashed password is not automatically copied to the clipboard</string>
-    <string name="title_activity_settings">Settings</string>
+
+    <!-- Settings summaries -->
+    <string name="settings_summary_remember_master_key_never">Master key
+        will not be remembered when you leave the app
+    </string>
+    <string name="settings_summary_remember_master_key_minutes">Master
+        key will be remembered for %d minutes after you leave the app
+    </string>
+    <string name="settings_summary_remember_master_key_hours"> Master key wil
+        l be remembered for %d hours after you leave the app
+    </string>
+    <string name="settings_summary_copy_to_clipboard_enabled">The hashed
+        password is automatically copied to the clipboard</string>
+    <string name="settings_summary_copy_to_clipboard_disabled">The hashed
+        password is not automatically copied to the clipboard</string>
+
+    <!-- Errors -->
     <string name="error">Ouch! Something happened!</string>
     <string name="error_no_profiles">Oops! You should create a profile
-     first!</string>
+        first!</string>
 
 </resources>
