--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="action_edit_profile">Edit profile</string>
     <string name="action_manage_tags">Manage tags</string>
     <string name="action_help">Help</string>
+    <string name="action_about">About</string>
     <string name="action_delete">Delete</string>
     <string name="discard">Discard</string>
     <string name="ok">Ok</string>
@@ -75,7 +76,8 @@
         liberty to generate a random one for you, but you can use a different
         one if you prefer.
     </string>
-    <item name="profile_default_name" format="string" type="string">Default</item>
+    <item name="profile_default_name" format="string" type="string">Default
+    </item>
 
     <!-- Notices -->
     <string name="no_tags">You got no tags!</string>
@@ -106,5 +108,29 @@
         first!</string>
     <string name="title_activity_tutorial">Tutorial</string>
     <string name="title_activity_add_default_profile">Add default profile</string>
+
+    <!-- About Dialog -->
+    <string name="about_body"><![CDATA[
+        <b>Hash my pass</b> is an application that makes it easy to generate
+        different and secure passwords for each website. It is compatible with
+        the Password Hasher Plus Chrome extension by Eric Woodruff.<br/><br/>
+
+        Version 1.0.0 beta1<br/><br/>
+
+        Copyright \u00A9 2014 Red Dye No. 2<br/><br/>
+
+        The password generation method is based on Password Hasher by Steve
+        Cooper.<br/><br/>
+
+        <b>Open source tools used:</b>
+        <br /><br />
+        <b><a href="http://jgilfelt.github.io/android-actionbarstylegenerator/">Android Action Bar Style Generator</a></b> <br />
+        <i>by The Android Open Source Project</i> and <i>readyState Software Ltd.</i> <br />
+        Apache 2.0 License
+        <br /> <br />
+        <b><a href="https://github.com/passsy/android-HoloCircularProgressBar">Ubuntu Mono</a></b> <br />
+        <i>by Canonical Ltd.</i> <br />
+        Ubuntu Font Licence 1.0
+    ]]></string>
 
 </resources>
