--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="tutorial_tag_settings_content">Some websites have specific
         requirements, like an specific password length.
         No problem! You can specify different settings for
-        those websites, and Hash my pass will remember it.</string>
+        those websites, and Hash my pass will remember them.</string>
     <string name="tutorial_browser_dialog_header">Login made easy</string>
     <string name="tutorial_browser_dialog_content">When using your
         favourite browser, share the page with Hash my Pass. You\'ll
@@ -76,6 +76,10 @@
         liberty to generate a random one for you, but you can use a different
         one if you prefer.
     </string>
+    <string name="tutorial_first_profile_master_key">You don\'t have
+        to remember this key, just make sure that you don\'t lose it!
+        You have to choose and remember a master key too,
+        but you don\'t have to fill it out right now.</string>
     <item name="profile_default_name" format="string" type="string">Default
     </item>
 
