Fixed wrong URL in Ubuntu Font Family link

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -137,7 +137,7 @@
         <i>por The Android Open Source Project</i> y <i>readyState Software Ltd.</i> <br />
         Apache 2.0 License
         <br /> <br />
-        <b><a href="https://github.com/passsy/android-HoloCircularProgressBar">Ubuntu Mono</a></b> <br />
+        <b><a href="http://font.ubuntu.com/">Ubuntu Mono</a></b> <br />
         <i>por Canonical Ltd.</i> <br />
         Ubuntu Font Licence 1.0
         <br /> <br />
