--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,7 +132,7 @@
         <i>by The Android Open Source Project</i> and <i>readyState Software Ltd.</i> <br />
         Apache 2.0 License
         <br /> <br />
-        <b><a href="https://github.com/passsy/android-HoloCircularProgressBar">Ubuntu Mono</a></b> <br />
+        <b><a href="http://font.ubuntu.com/">Ubuntu Mono</a></b> <br />
         <i>by Canonical Ltd.</i> <br />
         Ubuntu Font Licence 1.0
     ]]></string>
