AddDefaultProfile is now an AlertDialog instead of an activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="next">Next</string>
     <string name="start">Start</string>
     <string name="ready">I\'m ready to go!</string>
+    <string name="add_first_profile">Add your first profile</string>
 
     <!-- Dialogs -->
     <string name="confirm_delete">Delete \"%s\" profile?</string>
