--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -42,6 +42,7 @@
     <string name="next">Siguiente</string>
     <string name="start">Comenzar</string>
     <string name="ready">¡Estoy listo para empezar!</string>
+    <string name="add_first_profile">Añade tu primer perfil</string>
 
     <!-- Dialogs -->
     <string name="confirm_delete">¿Eliminar el perfil \"%s\"?</string>
