Key digest replaced by identicon

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -105,7 +105,8 @@
         elegir y recordar una contraseña maestra, pero no tienes que
         escribirla ahora.</string>
     <item name="profile_default_name" format="string" type="string">
-        Predeterminado</item>
+        Predeterminado
+    </item>
 
     <!-- Notices -->
     <string name="no_tags">¡No tienes etiquetas!</string>
@@ -177,9 +178,9 @@
         <i>por Eric Woodruff.</i><br/>
         MPL 1.1/GPL 2.0/LGPL 2.1 licenses.<br/><br/>
 
-        <b><a href="https://github.com/ginkel/hashit/">Hash It!</a></b><br/>
-        <i>por Thilo-Alexander Ginkel and TG Byte Software GmbH.</i><br/>
-        GPLv3 license.<br/><br/>
+        <b><a href="https://github.com/davidhampgonsalves/Contact-Identicons/">Contact-Identicons</a></b><br/>
+        <i>por David Hamp-Gonsalves.</i>
+        <br/><br/>
 
         <b><a href="http://jgilfelt.github.io/android-actionbarstylegenerator/">
         Android Action Bar Style Generator</a></b><br/>
