--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,9 +171,9 @@
         <i>by Eric Woodruff.</i><br/>
         MPL 1.1/GPL 2.0/LGPL 2.1 licenses.<br/><br/>
 
-        <b><a href="https://github.com/ginkel/hashit/">Hash It!</a></b><br/>
-        <i>by Thilo-Alexander Ginkel and TG Byte Software GmbH.</i><br/>
-        GPLv3 license.<br/><br/>
+        <b><a href="https://github.com/davidhampgonsalves/Contact-Identicons/">Contact-Identicons</a></b><br/>
+        <i>by David Hamp-Gonsalves.</i>
+        <br/><br/>
 
         <b><a href="http://jgilfelt.github.io/android-actionbarstylegenerator/">
         Android Action Bar Style Generator</a></b><br/>
