--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
 
     <!-- Titles -->
     <string name="app_name">Hash my pass</string>
+    <string name="tags_list">LIST OF TAGS</string>
 
     <!-- Actions -->
     <string name="action_settings">Settings</string>
@@ -44,6 +45,7 @@
     <string name="start">Start</string>
     <string name="ready">I\'m ready to go!</string>
     <string name="add_first_profile">Add your first profile</string>
+    <string name="hash_this_tag">Hash this tag</string>
 
     <!-- Dialogs -->
     <string name="confirm_delete">Delete \"%s\" profile?</string>
