--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,13 +23,13 @@
 
     <!-- Titles -->
     <string name="app_name">Hash my pass</string>
-    <string name="tags_list">LIST OF TAGS</string>
+    <string name="tags_list">LIST OF WEBSITES</string>
 
     <!-- Actions -->
     <string name="action_settings">Settings</string>
     <string name="action_add_profile">Add profile</string>
     <string name="action_edit_profile">Edit profile</string>
-    <string name="action_manage_tags">Manage tags</string>
+    <string name="action_manage_tags">Manage websites</string>
     <string name="action_help">Help</string>
     <string name="action_about">About</string>
     <string name="action_delete">Delete</string>
@@ -45,11 +45,11 @@
     <string name="start">Start</string>
     <string name="ready">I\'m ready to go!</string>
     <string name="add_first_profile">Add your first profile</string>
-    <string name="hash_this_tag">Hash this tag</string>
+    <string name="hash_this_tag">Generate the password</string>
 
     <!-- Dialogs -->
     <string name="confirm_delete">Delete \"%s\" profile?</string>
-    <string name="confirm_delete_tag">Delete \"%s\" tag?</string>
+    <string name="confirm_delete_tag">Delete \"%s\" website?</string>
     <string name="warning_lose_settings">You\'ll lose all its settings!</string>
 
     <!-- Descriptions / Hints -->
@@ -59,8 +59,8 @@
     <string name="private_key">Private key</string>
     <string name="name">Name</string>
     <string name="master_key">Master key</string>
-    <string name="tag">Tag</string>
-    <string name="tag_settings">Tag settings</string>
+    <string name="tag">Website</string>
+    <string name="tag_settings">Website settings</string>
 
     <!-- Tutorial -->
     <string name="tutorial_splash_subtitle">A different password for each site.
@@ -107,7 +107,7 @@
     </item>
 
     <!-- Notices -->
-    <string name="no_tags">You got no tags!</string>
+    <string name="no_tags">You got no websites!</string>
     <string name="copied_to_clipboard">Hashed password copied to
         clipboard</string>
 
