Enable copy password to clipboard

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -112,7 +112,7 @@
 
     <!-- Notices -->
     <string name="no_tags">¡No tienes sitios web!</string>
-    <string name="copied_to_clipboard">Contraseña generada copiada al
+    <string name="copied_to_clipboard">Contraseña del sitio web copiada al
         portapapeles</string>
 
     <!-- Settings titles -->
