--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,6 +128,8 @@
     <string name="error">Ouch! Something happened!</string>
     <string name="error_no_profiles">Oops! You should create a profile
         first!</string>
+    <string name="error_tag_exists">Hey, you already have this website!</string>
+
     <string name="title_activity_tutorial">Tutorial</string>
     <string name="title_activity_add_default_profile">Add default profile</string>
 
